--- a/js-day8/index.html
+++ b/js-day8/index.html
@@ -7,21 +7,16 @@
 </head>
 <body>
     
-    <div id="content">
-        <p>This is a paragraph</p>
-    </div>
+    <button id="btn" onclick="handleclick()">Click Me</button>
 
+    <!-- Q1  add ah1 tag and button and when user click on the button the color of the h1 will change -->
 
-    <div id="gallery">
-    </div>
+    <!-- Q2  -->
 
-
-    <div id="parent">
-        <p>child paragraph</p>
-    </div>
-
+    <button id="task2" oneclick="addText()">click to see changes</button>
+    <div id="render"></div>
+   
+   
     <script src="./script.js"></script>
-
-
 </body>
 </html>
