--- a/js-day9/index.html
+++ b/js-day9/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-    <div id="content">
-        <p>This is a paragraph</p>
-    </div>
 
+    <input type="text" id="myInput">
 
-    <div id="gallery">
-    </div>
+    <p id="output"></p>
 
-
-    <div id="parent">
-        <p>child paragraph</p>
-    </div>
 
     <script src="./script.js"></script>
-
-
 </body>
+
 </html>
